--- a/store/src/default/pages/Authentication/Auth/auth.component.html
+++ b/store/src/default/pages/Authentication/Auth/auth.component.html
@@ -8,9 +8,8 @@
                 <h4><span>or continue with</span></h4>
 
                 <div class="text-center mt-3 formIcons">
-                    <mat-icon>facebook</mat-icon>
+                    <button class="loginBtn loginBtn--facebook" (click)="login()"><mat-icon>facebook</mat-icon></button>      
                     <mat-icon><img src="../../../../assets/images/google.png" alt=""></mat-icon>
-                    <mat-icon>apple</mat-icon>
                 </div>
                 <!-- <h2 class="text-muted text-center">Sign up</h2> -->
                 <h6>Become a Beaver Member</h6>
