--- a/store/src/default/shared/components/top-menu/top-menu.component.html
+++ b/store/src/default/shared/components/top-menu/top-menu.component.html
@@ -20,7 +20,7 @@
             </button> -->
         </form>
         <div mat-dialog-content *ngIf="searchLists?.length > 0 && searchValue">
-            <div>
+            <div class="searchTitles">
                 <h5>Recent</h5>
                 <h5>Clear All</h5>
             </div>
