--- a/store/src/default/common/layout/layout.container.html
+++ b/store/src/default/common/layout/layout.container.html
@@ -18,7 +18,7 @@
     </div>
     <app-options></app-options>
 <!-- footer -->
-    <app-menu [categories]="listSandBox.categoryList$ | async"></app-menu>
+    <!-- <app-menu [categories]="listSandBox.categoryList$ | async"></app-menu> -->
     <app-footer></app-footer>
     <!--  -->
 
