--- a/store/src/styles.scss
+++ b/store/src/styles.scss
@@ -14,6 +14,10 @@
 @import '~@ngx-share/button/themes/modern/modern-light-theme';
 @import '~@ngx-share/button/themes/outline/outline-theme';
 
+.cdk-global-scrollblock{
+    position: initial;
+}
+
 .app.green {
     .mat-standard-chip {
         width: 38px;
