--- a/store/src/styles.scss
+++ b/store/src/styles.scss
@@ -920,7 +920,10 @@ html.cdk-global-scrollblock{position: static;}
     color: #757575;
     font-weight: bold;
 }
-
+.menu-drop h3 {
+    padding: 10px 20px;
+    font-size: 18px;
+}
 
 
 @media (min-width: 960px){
