--- a/store/src/default/shared/components/top-menu/top-menu.component.html
+++ b/store/src/default/shared/components/top-menu/top-menu.component.html
@@ -63,7 +63,7 @@
 
 
     <!-- *ngIf="(commonSandbox.getProfile$ | async)?.email" -->
-    <a mat-button [matMenuTriggerFor]="accountMenu" #accountMenuTrigger="matMenuTrigger" class="blackStyle">
+    <a mat-button [matMenuTriggerFor]="accountMenu" #accountMenuTrigger="matMenuTrigger" class="blackStyle profileIcon">
         <!-- <mat-icon class="mat-icon-sm account-icon blackStyle">person</mat-icon> -->
         <mat-icon routerLink="/auth" class="mat-icon-sm account-icon blackStyle"><img
                 src="../../../assets/images/Profile.png" /></mat-icon>
