--- a/store/src/styles.scss
+++ b/store/src/styles.scss
@@ -924,7 +924,15 @@ html.cdk-global-scrollblock{position: static;}
     padding: 10px 20px;
     font-size: 18px;
 }
+.profileIcon span.blackStyle {
+    margin-top: 8px !important;
+ }
 
+@media (max-width: 1480px){
+    .priceAndIcons p, .product-item .prices .new-price {font-size: 14px;}
+    .app.green .new-price {margin: 0 4px;}
+    .app.green .mat-toolbar.mat-primary a.logo{margin-right: 20px;}
+}
 
 @media (min-width: 960px){
     .formSignInUp{position: relative;justify-content: space-between;}
@@ -944,6 +952,7 @@ html.cdk-global-scrollblock{position: static;}
     .app.green .top-navbar.mat-toolbar a {padding: 5px;}
     .flex-row-button.headerCartIcon {padding: 5px;min-width: auto;}
     .app .theme-container-full.main {padding: 67px 0 0 0;}
+    .top-menu {align-items: center;justify-content: flex-end;}
 }
 
 @media (max-width: 767px){
