--- a/store/src/default/shared/components/trending-product/trending-product.component.html
+++ b/store/src/default/shared/components/trending-product/trending-product.component.html
@@ -93,7 +93,7 @@
           </a>
           <div fxLayout="row" fxLayoutAlign="space-between center" class="prices">
             <div fxLayout="row" fxLayoutAlign="center center" class="priceAndIcons">
-              <p class="regularPrice">$300</p>
+              <p class="regularPrice">${{product.price}}</p>
               <p class="new-price">
                 $ {{product.price}}
               </p>
