--- a/store/src/default/pages/products/products.component.html
+++ b/store/src/default/pages/products/products.component.html
@@ -111,14 +111,15 @@
                 </mat-card>
             </div>
         </div>
-        <div *ngIf="(listSandbox.productLoaded$ | async) && (listSandbox.productlist$ | async)?.length == 0"
+        <app-product-not-found *ngIf="(listSandbox.productLoaded$ | async) && (listSandbox.productlist$ | async)?.length == 0"></app-product-not-found>
+        <!-- <div *ngIf="(listSandbox.productLoaded$ | async) && (listSandbox.productlist$ | async)?.length == 0"
             fxLayout="row wrap">
             <div fxFlex="100" fxFlex.gt-xs="90" class="p-2">
                 <img style="margin-left: 45%;" src="../../../assets/images/default-image.jpg" alt="not found" height="150" width="150">
                 <p style="margin-left: 50%;margin-top:1%;color:rgb(17, 15, 15); font-weight: 900; font-size: 20px;">No Found</p>
                 <p style="margin-left: 30%;margin-top:1%;color:gray">Sorry, the keyword you entered cannot be found, please check again or search with anotherkeyword </p>
             </div>
-        </div>
+        </div> -->
         <div *ngIf="(listSandbox.productlist$ | async)?.length > 0" fxLayout="row wrap">
             <div fxFlex="100">
                 <mat-card class="p-0 text-center">
@@ -128,11 +129,11 @@
                     <!--<pagination-controls class="product-pagination" autoHide="false" maxSize="5"-->
                     <!--(pageChange)="onPageChanged($event)"></pagination-controls>-->
                 </mat-card>
-            </div>            
+            </div>
         </div>
 
     </mat-sidenav-content>
-    
+
 </mat-sidenav-container>
 
 <div class="products-tabs featured-tabs">
