--- a/admin/src/theme/default/admin/layout/auth/auth.component.html
+++ b/admin/src/theme/default/admin/layout/auth/auth.component.html
@@ -21,8 +21,8 @@
     <div class="login">
         <div class="row">
             <div class="col-md-7 col-sm-6">
-                <img src="assets/img/spurt_v3.png" class="spurt-img">
-                <div class="txt">A quick and easy Node JS and Angular eCommerce solution to develop an awesome e-commerce Website</div>
+                <img src="assets/img/logo1.png"  style="width: 20%;" class="spurt-img">
+                <div class="txt">Beaver</div>
             </div>
             <div class="col-md-5 col-sm-6">
                 <router-outlet></router-outlet>
@@ -31,5 +31,5 @@
         </div>
 
     </div>
-    <div class="ttt"> Piccosoft Software Labs India (P) Ltd. © 2019. All Rights Reserved.</div>
+    <div class="ttt"> Beaver Software Labs  Ltd. © 2022. All Rights Reserved.</div>
 </div>
