contact us page added

--- a/store/src/default/shared/components/footer/footer.component.html
+++ b/store/src/default/shared/components/footer/footer.component.html
@@ -3,7 +3,7 @@
 
         <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="25" class="useful-links">
             <h3 class="col-title">USEFUL LINKS FOR CUSTOMER</h3>
-            <div class="footer-menu-item"><a mat-button>Contact us</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/account/contactus">Contact us</a></div>
             <div class="footer-menu-item"><a mat-button>FAQs</a></div>
             <div class="footer-menu-item"><a mat-button>T&C</a></div>
             <div class="footer-menu-item"><a mat-button>Shiping</a></div>
@@ -22,7 +22,7 @@
 
 
             <h3 class="col-title">USEFUL LINKS FOR VENDOR</h3>
-            <div class="footer-menu-item"><a mat-button>Contact us</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/account/contactus">Contact us</a></div>
             <div class="footer-menu-item"><a mat-button>FAQs</a></div>
             <div class="footer-menu-item"><a mat-button>T&C</a></div>
             <div class="footer-menu-item"><a mat-button>Shiping</a></div>
@@ -30,7 +30,7 @@
             <div class="footer-menu-item"><a mat-button>Pricavy policy</a></div>
 
             <h3 class="mt-3 col-title">CORPORATE</h3>
-            <div class="footer-menu-item"><a mat-button>Contact us</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/account/contactus">Contact us</a></div>
             <div class="footer-menu-item"><a mat-button>Careers</a></div>
 
         </div>
