--- a/store/src/default/shared/components/top-menu/top-menu.component.html
+++ b/store/src/default/shared/components/top-menu/top-menu.component.html
@@ -131,10 +131,10 @@
             <a mat-menu-item routerLink="/account/orders">
                 <span>My orders</span>
             </a>
-            <a mat-menu-item>
+            <a mat-menu-item routerLink="/account/contactus">
                 <span>Contact Us</span>
             </a>
-            <a mat-menu-item>
+            <a mat-menu-item  routerLink="/account/help">
                 <span>Need Help</span>
             </a>
             <a mat-menu-item>
