--- a/store/src/default/shared/components/product-not-found/product-not-found.component.html
+++ b/store/src/default/shared/components/product-not-found/product-not-found.component.html
@@ -1,7 +1,8 @@
-<div fxLayout="row wrap">
-    <div fxFlex="100" fxFlex.gt-xs="90" class="p-2">
-        <img src="../../../assets/images/default-image.jpg" alt="not found" height="150" width="150">
-        <p>No Found</p>
+<div class="notFonudPage" fxLayout="row wrap">
+    <div fxFlex="100" fxFlex.gt-xs="90" class="p-2 text-center">
+    	<h3 class="text-left">Result for "xyzzz"</h3>
+        <img class="notFoundImg" src="../../../assets/images/frame.png" alt="not found" height="" width="">
+        <h3>Not Found</h3>
         <p>Sorry, the keyword you entered cannot be found, please
             check again or search with anotherkeyword </p>
     </div>
