--- a/store/src/styles.scss
+++ b/store/src/styles.scss
@@ -845,7 +845,7 @@ top: 25px;left: 20px;}
 
 .loginPage .fieldWithIcon input.mat-input-element {padding-left: 50px;}
 .mat-expansion-panel-header, .categories-dropdown .mat-menu-item{font-family: 'Urbanist', sans-serif;}
-.app.green .new-price{margin: 0 7px;}
+.app.green .new-price{margin: 0 4px;}
 .app .theme-container-full.main {
     padding: 117px 0 0 0;
 }
@@ -935,11 +935,18 @@ html.cdk-global-scrollblock{position: static;}
 .cdk-overlay-pane {
     position: fixed;
 }
+.text-left{text-align: left;}
+
+.notFonudPage h3 {
+    margin-bottom: 15px;line-height: normal;
+}
+.notFoundImg{margin-bottom: 20px;}
+.priceAndIcons p {font-size: 14px;}
+.priceAndIcons p{font-size: 14px;}
 
 
 @media (max-width: 1480px){
     .priceAndIcons p, .product-item .prices .new-price {font-size: 14px;}
-    .app.green .new-price {margin: 0 4px;}
     .app.green .mat-toolbar.mat-primary a.logo{margin-right: 20px;}
 }
 
