create wishlist page

--- a/store/src/default/pages/wishlist/wishlist.component.html
+++ b/store/src/default/pages/wishlist/wishlist.component.html
@@ -2,16 +2,21 @@
     <mat-chip color="warn" style="width: 25%;" selected="true">YOU HAVE NO ITEM IN WISH LIST</mat-chip>
 </mat-chip-list>
 
-<mat-card class="p-0">
-    <div class="wrapper" *ngIf="wishlistSandbox.wishlistLoading$ | async">
-        <div class="overlay">
-            <div class="spinner-wrapper">
-                <app-spinner [isShow]="wishlistSandbox.wishlistLoading$ | async"></app-spinner>
+<mat-sidenav-container class="productsWrap trending-products">
+    <mat-sidenav-content class="all-products" ngClass.gt-sm="p-left">
+      <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center"
+        class="filter-row mat-elevation-z1 text-muted">
+        <!-- <mat-card class="product-item text-center card-hover"> -->
+
+            <div class="wrapper" *ngIf="wishlistSandbox.wishlistLoading$ | async">
+                <div class="overlay">
+                    <div class="spinner-wrapper">
+                        <app-spinner [isShow]="wishlistSandbox.wishlistLoading$ | async"></app-spinner>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="mat-table wishlist-table" *ngIf="(wishlistSandbox.wishlist$ | async)?.length > 0">
-        <!-- <div class="mat-header-row">
+            <!-- <div class="mat-table wishlist-table" *ngIf="(wishlistSandbox.wishlist$ | async)?.length > 0"> -->
+            <!-- <div class="mat-header-row">
             <div class="mat-header-cell">Product</div>
             <div class="mat-header-cell">Name</div>
             <div class="mat-header-cell" style="margin-left: 15px">Price</div>
@@ -21,27 +26,67 @@
                 </div>
             </div>
         </div> -->
-        <!-- <div *ngFor="let product of wishlistSandbox.wishlist$ | async" class="mat-row">
-            <div class="mat-cell"><img *ngIf="product.productImage" [src]="imagePath+ '?path=' + product.productImage.containerName + '&name=' + product.productImage.image + '&width=300&height=300'" onError="this.src='/assets/images/default_image.png';">
-            </div>
-            <div class="mat-cell"><a [routerLink]="['/products/productdetails', product.productId]" class="product-name">{{product.product.name}}</a>
-            </div>
-            <div class="mat-cell" style="margin-left: 15px">
-                <ng-container > $ {{product?.product?.price}}
-                </ng-container>    
-            </div>
-            <div class="mat-cell">{{product.product.dateAvailable | date:'dd/MM/yyyy'}}</div>
-            <div class="mat-cell">
-                <div class="p-1">
-                    <button class="card-hover" mat-mini-fab color="primary" (click)="addToCart(product)" matTooltip="Add To Cart">
-                        <mat-icon>add_shopping_cart</mat-icon>
+            <div *ngIf="viewType == 'grid'" fxLayout="row wrap" class="products-wrapper">
+                <div *ngFor="let product of wishlistSandbox.wishlist$ | async" fxFlex="100" [fxFlex.gt-sm]="viewCol"
+                    fxFlex.sm="50" class="col">
+                    <mat-card class="product-item text-center card-hover productCol">
+                    <button class="wishIcon" mat-icon-button
+                        matTooltip="Add to cart">
+                        <mat-icon><img src="../../../assets/images/Buy.png" /></mat-icon>
                     </button>
-                    <button mat-mini-fab color="warn" (click)="remove(product.productId)" matTooltip="Clear" class="remove card-hover">
-                        <mat-icon>close</mat-icon>
-                    </button>
-                    <span [hidden]="!(wishlistSandbox.wishlistLoading$ | async)" class="spinner-border spinner-border-sm pull-right" role="status" aria-hidden="true"></span>
+                    <!-- <div class="product-img">
+                        <a class="image-link">
+                            <img *ngIf="product.productImage"
+                                [src]="imagePath+ '?path=' + product.productImage.containerName + '&name=' + product.productImage.image + '&width=260&height=260'"
+                                onError="this.src='/assets/images/default_image.png';">
+                        </a>
+                        <div class="productRating">
+                            <div>
+                                <div class="halfstar1">&#x2605; 4.3 | <span>234</span></div>
+                            </div>
+                        </div>
+                    </div> -->
+                    <div class="product-img">
+                        <a [routerLink]="['/products/productdetails', product.productId]" class="image-link">
+                            <!-- *ngIf="product['Images'].defaultImage == 1" -->
+                            <img  *ngIf="product.productImage" [src]="imagePath+ '?path=' + product.productImage.containerName + '&name=' + product.productImage.image + '&width=260&height=260'"
+                                onError="this.src='/assets/images/default_image.png';">
+                        </a>
+                        <div class="productRating">
+                            <div>
+                                <div class="halfstar1">&#x2605; 4.3 | <span>234</span></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mat-cell"><a [routerLink]="['/products/productdetails', product.productId]"
+                            class="title text-truncate">{{product.product.name}}</a>
+                    </div>
+                    <div class="new-price">
+                        <ng-container> $ {{product?.product?.price}}
+                        </ng-container>
+                    </div>
+                    <div class="mat-cell">{{product.product.dateAvailable | date:'dd/MM/yyyy'}}</div>
+                    <div class="mat-cell">
+                        <div class="p-1">
+                            <button class="card-hover" mat-mini-fab color="primary" (click)="addToCart(product)"
+                                matTooltip="Add To Cart">
+                                <mat-icon>add_shopping_cart</mat-icon>
+                            </button>
+                            <button mat-mini-fab color="warn" (click)="remove(product.productId)" matTooltip="Clear"
+                                class="remove card-hover">
+                                <mat-icon>close</mat-icon>
+                            </button>
+                            <span [hidden]="!(wishlistSandbox.wishlistLoading$ | async)"
+                                class="spinner-border spinner-border-sm pull-right" role="status"
+                                aria-hidden="true"></span>
+                        </div>
+                    </div>
+                </mat-card>
                 </div>
             </div>
-        </div> -->
-    </div>
-</mat-card>
+            </div>
+            <!-- </div> -->
+        <!-- </mat-card> -->
+    </mat-sidenav-content>
+</mat-sidenav-container>
