--- a/store/src/default/pages/wishlist/wishlist.component.html
+++ b/store/src/default/pages/wishlist/wishlist.component.html
@@ -26,63 +26,76 @@
                 </div>
             </div>
         </div> -->
-            <div *ngIf="viewType == 'grid'" fxLayout="row wrap" class="products-wrapper">
-                <div *ngFor="let product of wishlistSandbox.wishlist$ | async" fxFlex="100" [fxFlex.gt-sm]="viewCol"
-                    fxFlex.sm="50" class="col">
-                    <mat-card class="product-item text-center card-hover productCol">
-                    <button class="wishIcon" mat-icon-button
-                        matTooltip="Add to cart">
-                        <mat-icon><img src="../../../assets/images/Buy.png" /></mat-icon>
-                    </button>
-                    <!-- <div class="product-img">
-                        <a class="image-link">
-                            <img *ngIf="product.productImage"
-                                [src]="imagePath+ '?path=' + product.productImage.containerName + '&name=' + product.productImage.image + '&width=260&height=260'"
-                                onError="this.src='/assets/images/default_image.png';">
-                        </a>
-                        <div class="productRating">
-                            <div>
-                                <div class="halfstar1">&#x2605; 4.3 | <span>234</span></div>
-                            </div>
-                        </div>
-                    </div> -->
-                    <div class="product-img">
-                        <a [routerLink]="['/products/productdetails', product.productId]" class="image-link">
-                            <!-- *ngIf="product['Images'].defaultImage == 1" -->
-                            <img  *ngIf="product.productImage" [src]="imagePath+ '?path=' + product.productImage.containerName + '&name=' + product.productImage.image + '&width=260&height=260'"
-                                onError="this.src='/assets/images/default_image.png';">
-                        </a>
-                        <div class="productRating">
-                            <div>
-                                <div class="halfstar1">&#x2605; 4.3 | <span>234</span></div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="site-container">
+                <div class="advertisement-heading">
+                  <h4 class="titleWithIcon"><img src='/assets/images/back-arrow.png'>My Wishlist</h4>
+                </div>
+                <div *ngIf="viewType == 'grid'" fxLayout="row wrap" class="products-wrapper w-100">
+                    <div *ngFor="let product of wishlistSandbox.wishlist$ | async" fxFlex="100" [fxFlex.gt-sm]="viewCol"
+                        fxFlex.sm="50" class="col">
 
-                    <div class="mat-cell"><a [routerLink]="['/products/productdetails', product.productId]"
-                            class="title text-truncate">{{product.product.name}}</a>
-                    </div>
-                    <div class="new-price">
-                        <ng-container> $ {{product?.product?.price}}
-                        </ng-container>
-                    </div>
-                    <div class="mat-cell">{{product.product.dateAvailable | date:'dd/MM/yyyy'}}</div>
-                    <div class="mat-cell">
-                        <div class="p-1">
-                            <button class="card-hover" mat-mini-fab color="primary" (click)="addToCart(product)"
-                                matTooltip="Add To Cart">
-                                <mat-icon>add_shopping_cart</mat-icon>
-                            </button>
-                            <button mat-mini-fab color="warn" (click)="remove(product.productId)" matTooltip="Clear"
-                                class="remove card-hover">
-                                <mat-icon>close</mat-icon>
-                            </button>
-                            <span [hidden]="!(wishlistSandbox.wishlistLoading$ | async)"
-                                class="spinner-border spinner-border-sm pull-right" role="status"
-                                aria-hidden="true"></span>
+                        <mat-card class="product-item text-center card-hover productCol">
+                        <button class="wishIcon" mat-icon-button
+                            matTooltip="Add to cart">
+                            <mat-icon><img src="../../../assets/images/Buy.png" /></mat-icon>
+                        </button>
+                        <!-- <div class="product-img">
+                            <a class="image-link">
+                                <img *ngIf="product.productImage"
+                                    [src]="imagePath+ '?path=' + product.productImage.containerName + '&name=' + product.productImage.image + '&width=260&height=260'"
+                                    onError="this.src='/assets/images/default_image.png';">
+                            </a>
+                            <div class="productRating">
+                                <div>
+                                    <div class="halfstar1">&#x2605; 4.3 | <span>234</span></div>
+                                </div>
+                            </div>
+                        </div> -->
+                        <div class="product-img">
+                            <a [routerLink]="['/products/productdetails', product.productId]" class="image-link">
+                                <!-- *ngIf="product['Images'].defaultImage == 1" -->
+                                <img  *ngIf="product.productImage" [src]="imagePath+ '?path=' + product.productImage.containerName + '&name=' + product.productImage.image + '&width=260&height=260'"
+                                    onError="this.src='/assets/images/default_image.png';">
+                            </a>
+                            <div class="productRating">
+                                <div>
+                                    <div class="halfstar1">&#x2605; 4.3 | <span>234</span></div>
+                                </div>
+                            </div>
                         </div>
+
+                        <div class="mat-cell"><a [routerLink]="['/products/productdetails', product.productId]"
+                                class="title text-truncate">{{product.product.name}}</a>
+                        </div>
+                        <div fxLayout="row" fxLayoutAlign="space-between center" class="prices">
+                            <div fxLayout="row" fxLayoutAlign="center center" class="priceAndIcons">
+                              <p class="regularPrice" *ngIf="product.regular">${{product.regular}}</p>
+                              <p class="new-price">
+                                $ {{product?.product?.price}}
+                              </p>
+                              <!--  <app-controls [product]="product" [type]="'all'" (OpenProductDialog)="openProductDialog(product)">
+                              </app-controls> -->
+                            </div>
+                        </div>
+
+                        <!-- <div class="mat-cell">{{product.product.dateAvailable | date:'dd/MM/yyyy'}}</div> -->
+                        <!-- <div class="mat-cell">
+                            <div class="p-1">
+                                <button class="card-hover" mat-mini-fab color="primary" (click)="addToCart(product)"
+                                    matTooltip="Add To Cart">
+                                    <mat-icon>add_shopping_cart</mat-icon>
+                                </button>
+                                <button mat-mini-fab color="warn" (click)="remove(product.productId)" matTooltip="Clear"
+                                    class="remove card-hover">
+                                    <mat-icon>close</mat-icon>
+                                </button>
+                                <span [hidden]="!(wishlistSandbox.wishlistLoading$ | async)"
+                                    class="spinner-border spinner-border-sm pull-right" role="status"
+                                    aria-hidden="true"></span>
+                            </div>
+                        </div> -->
+                    </mat-card>
                     </div>
-                </mat-card>
                 </div>
             </div>
             </div>
